fixed bird restart position

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 $(this).fadeOut('slow');
                 $('#pillar_down').css('left','300px');
                 $('#pillar_up').css('left','300px');
+                $('#bird').css('top','100px');bird.y=100;
                 $('#bird').removeClass('bird_crashed');
                 score = 0;
                 $('#get_ready').fadeIn('slow');
